Calculator numbers buttons and Plus, Minus operation actions

--- a/hw6/src/main/res/layout/activity_main.xml
+++ b/hw6/src/main/res/layout/activity_main.xml
@@ -101,7 +101,7 @@
             android:background="@drawable/text_edit_bg"
             />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/enter_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
