--- a/Calculator/src/main/res/layout/activity_main.xml
+++ b/Calculator/src/main/res/layout/activity_main.xml
@@ -7,6 +7,14 @@
     android:background="@color/black"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/btn_menu"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_menu"
+        android:visibility="gone"
+        />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
