--- a/Calculator/src/main/res/values/style.xml
+++ b/Calculator/src/main/res/values/style.xml
@@ -23,4 +23,15 @@
         <item name="backgroundTint">@color/orange</item>
     </style>
 
+    <style name="Menu.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_width">350dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:padding">20dp</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="cornerRadius">20dp</item>
+    </style>
+
 </resources>
